--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="wide wow-animation" lang="en">
   <head>
     <!-- Site Title-->
-    <title>Home</title>
+    <title>WordOfWoodbyrb</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,38 +35,29 @@
     <div class="page">
      
       <header class="page-header section">
-        <!-- RD Navbar-->
-        <div class="rd-navbar-wrap">
-          <nav class="rd-navbar rd-navbar-creative" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-sm-device-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fullwidth" data-xl-device-layout="rd-navbar-fullwidth" data-xl-layout="rd-navbar-fullwidth" data-xxl-device-layout="rd-navbar-fullwidth" data-xxl-layout="rd-navbar-fullwidth" data-stick-up-clone="false" data-md-stick-up-offset="150px" data-lg-stick-up-offset="60px" data-md-stick-up="true" data-lg-stick-up="true">
-            <div class="rd-navbar-main-outer">
-              <div class="rd-navbar-main">
-                <!-- RD Navbar Panel-->
-                <div class="rd-navbar-panel">
-                  <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-                  <!-- RD Navbar Brand-->
-                  <div class="rd-navbar-brand"><a class="brand" href="index.html">
-                      <div class="brand__name"><img src="images/logo-default-380x100.png" alt="" width="190" height="50"/>
-                      </div></a></div>
-                </div>
-                <!-- RD Navbar Nav-->
-                <div class="rd-navbar-nav-wrap">
-                  <div class="rd-navbar-main-item"><a class="button button-xs button-lighter" href="contacts.html">Get in Touch</a></div>
-                  <!-- RD Navbar Nav-->
-                  <ul class="rd-navbar-nav">
-                    <li class="active"><a href="index.html">Home</a>
-                    </li>
-                    <li><a href="about-us.html">About Us</a>
-                    </li>
-                    <li><a href="typography.html">Catalogue</a>
-                    </li>
-                    <li><a href="contacts.html">Contact Us</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </nav>
-        </div>
+
+        <nav class="navbar" id="navbar">
+          <div class="logo">
+            <img src="images/logo-default-380x100.png" alt="Logo"> <text class="logo-text">रामभरोसे एंड संस</text>
+          </div>
+          <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact Us</a>
+          </div>
+          <button class="get-in-touch">Get in Touch</button>
+          <div class="hamburger" id="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="mobile-menu" id="mobileMenu">
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact Us</a>
+          </div>
+        </nav>
+        
       </header>
       <!-- Swiper-->
       <section class="section swiper-slider_style-3 swiper-buttons-alternate">
@@ -97,7 +88,7 @@
                 <div class="swiper-slide-caption">
                   <div class="container">
                     <h1 data-caption-animate="fadeInUpSmall">Wide Product Variety</h1>
-                    <p class="big" style="max-width: 520px" data-caption-animate="fadeInRightSmall" data-caption-delay="300">At World of Wood, we offer a diverse range of premium materials to elevate your space. From sound-enhancing Acoustic Fluted Panels and sleek Metal Sheets to unique Mosaic Wood Designs, ASA Sheets, and stylish Charcoal Highlighters, we have everything you need for both beauty and functionality. Our collection also includes Fabric Sheets and durable Evergreen Panel, Laminates—perfect for creating spaces that blend comfort, design, and innovation. Transform your surroundings with World of Wood!</p><a class="button button-primary" href="#" data-caption-animate="fadeInRightSmall" data-caption-delay="550">View all Collections</a>
+                    <p class="big" style="max-width: 520px" data-caption-animate="fadeInRightSmall" data-caption-delay="300">At World of Wood, we offer a diverse range of premium materials to elevate your space. From sound-enhancing Acoustic Fluted Panels and sleek Metal Sheets to unique Mosaic Wood Designs, ASA Sheets, and stylish Charcoal Highlighters, we have everything you need for both beauty and functionality. Our collection also includes Fabric Sheets and durable Evergreen Panel. Transform your surroundings with World of Wood!</p><a class="button button-primary" href="#" data-caption-animate="fadeInRightSmall" data-caption-delay="550">View all Collections</a>
                   </div>
                 </div>
               </div>
@@ -171,12 +162,12 @@
               <div class="row row-offset-2">
                 <div class="col-6 col-md-4 col-lg-3 isotope-item" data-filter="Category 1">
                   <!-- Product-->
-                  <article class="product"> <a class="product__image-wrap" href="#"><img class="product__image" src="images/product-01-210x200.jpg" alt="" width="210" height="200"/></a>
-                    <div class="product__main">
+                  <article class="product" > <a class="product__image-wrap" href="#"><img class="product__image" src="images/product-01-210x200.jpg" alt="" width="210" height="200"/></a>
+                    <div class="product__main" >
                       <p class="product__title"><a href="#">Laminates</a></p>
                       <p class="product__price"></p>
                     </div>
-                    <div class="product__footer"><a class="button button-xs button-gray-2" href="#">details</a></div>
+                    <div class="product__footer" onclick="openModal('laminates')"><a class="button button-xs button-gray-2" href="#">details</a></div>
                   </article>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 isotope-item" data-filter="Category 2">
@@ -453,6 +444,24 @@
             </div>
           </div>
         </div>
+        <!--Product type modal-->
+        <div class="modal" id="productModal">
+          <div class="modal-content">
+              <h2 id="modal-title"></h2>
+              <ul id="type-list">
+                  <!-- Types will be populated dynamically -->
+                  <button onclick="openModal()">View Product PDF</button>
+              </ul>
+              <div class="close-btn" onclick="closeModal('productModal')">Close</div>
+          </div>
+          <!--product pdf-->
+          <div id="pdfModal" class="modal">
+            <div class="modal-content">
+                <span class="close-btn" onclick="closeModal()">&times;</span>
+                <iframe id="pdfFrame" src="path_to_your_pdf.pdf" frameborder="0"></iframe>
+            </div>
+        </div>
+      </div>
       </section>
       <!-- Latest News-->
       <section class="section section-md bg-gray-4 text-center">
@@ -520,5 +529,89 @@
     <!-- Javascript-->
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+      const navbar = document.getElementById('navbar');
+      const hamburger = document.getElementById('hamburger');
+      const mobileMenu = document.getElementById('mobileMenu');
+      let lastScrollTop = 0;
+  
+      // Toggle mobile menu
+      hamburger.addEventListener('click', () => {
+        mobileMenu.classList.toggle('show');
+      });
+  
+      // Hide navbar on scroll down, show on scroll up
+      window.addEventListener('scroll', () => {
+        const currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+        if (currentScroll > lastScrollTop) {
+          navbar.classList.add('hidden');
+        } else {
+          navbar.classList.remove('hidden');
+        }
+        lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
+      });
+    </script>
+    <script>
+      // Product types and their PDF links
+      const products = {
+          'laminates': [
+              { name: 'Glossy Laminates', pdf: 'https://drive.google.com/file/d/1gV8zhWsSj5MdTN-fVGHC1aa7fPv9A78j/preview' },
+              { name: 'Matte Laminates', pdf: 'https://drive.google.com/file/d/FILE_ID_2/preview' }
+          ],
+          'fabric-sheets': [
+              { name: 'Cotton Sheets', pdf: 'https://drive.google.com/file/d/FILE_ID_3/preview' },
+              { name: 'Silk Sheets', pdf: 'https://drive.google.com/file/d/FILE_ID_4/preview' }
+          ],
+          'wall-mouldings': [
+              { name: 'Classic Mouldings', pdf: 'https://drive.google.com/file/d/FILE_ID_5/preview' },
+              { name: 'Modern Mouldings', pdf: 'https://drive.google.com/file/d/FILE_ID_6/preview' }
+          ],
+          'wallpapers': [
+              { name: 'Floral Wallpapers', pdf: 'https://drive.google.com/file/d/FILE_ID_7/preview' },
+              { name: 'Geometric Wallpapers', pdf: 'https://drive.google.com/file/d/FILE_ID_8/preview' }
+          ]
+      };
+
+      // Open product type modal
+      function openModal(category) {
+          const modal = document.getElementById('productModal');
+          const title = document.getElementById('modal-title');
+          const list = document.getElementById('type-list');
+
+          title.textContent = `Product Types - ${category.replace('-', ' ').toUpperCase()}`;
+          list.innerHTML = ''; // Clear previous items
+
+          // Populate product types dynamically
+          products[category].forEach(type => {
+              const listItem = document.createElement('li');
+              listItem.textContent = type.name;
+              listItem.onclick = () => openPDF(type.pdf);
+              list.appendChild(listItem);
+          });
+
+          modal.style.display = 'flex';
+      }
+
+      // Open PDF modal
+      function openPDF(pdfLink) {
+          const pdfModal = document.getElementById('pdfModal');
+          const pdfFrame = document.getElementById('pdfFrame');
+
+          pdfFrame.src = pdfLink; // Set PDF link
+          pdfModal.style.display = 'flex';
+      }
+
+      function closeModal() {
+    modal.style.display = 'none';
+    document.body.style.overflow = 'auto'; // Restore background scrolling
+}
+
+// Close modal when clicking outside of it
+window.onclick = function (event) {
+    if (event.target === modal) {
+        closeModal();
+    }
+};
+  </script>
   </body>
 </html>
