--- a/index.html
+++ b/index.html
@@ -558,7 +558,46 @@
       const products = {
           'laminates': [
               { name: 'Glossy Laminates', pdf: 'https://drive.google.com/file/d/1gV8zhWsSj5MdTN-fVGHC1aa7fPv9A78j/preview' },
-              { name: 'Matte Laminates', pdf: 'https://drive.google.com/file/d/FILE_ID_2/preview' }
+              { name: 'Matte Laminates', pdf: 'https://drive.google.com/file/d/FILE_ID_2/preview' },
+              { name: 'BRAVIA LAM  Laminates Catalogue', pdf: 'https://drive.google.com/file/d/114hnzGu1YKYyLnWeRmKVoB3sxr1aRHTG/preview'},
+              { name: 'CORRA- The solid surfacing Catalogue', pdf: 'https://drive.google.com/file/d/1XKPUqxVx9D7wyv6xhXqVFfe8jCuGJ9m1/preview'},
+              { name: 'SPR Series', pdf: 'https://drive.google.com/file/d/1aBxZHeMz_2lze3wHbfRBqfOTqaetpZKh/preview'},
+              { name: 'DIXON Laminates', pdf: 'https://drive.google.com/file/d/1CYZbATSRaptLdhNImWo0j8tTKXib2YN9/preview'},
+              { name: 'Colordesk Premium Plain Color', pdf: 'https://drive.google.com/file/d/1YzQ3e7zNZFYK8C-kHJleIre-F3KtoekT/preview'},
+              { name: 'Surface Dekor', pdf: 'https://drive.google.com/file/d/1_ITpZeR0eiY7goCPvHfkq8r5P8FrItIA/preview'},
+              { name: 'Cane Jute', pdf: 'https://drive.google.com/file/d/1mRr1vq7W5pQoXpJEhKzVoqyAuZG3GF7L/preview'},
+              { name: 'Zero Gravity Surface Dekor', pdf: 'https://drive.google.com/file/d/18817ITE4HXxueXfcTVOxUerksRCou3SH/preview'},
+              { name: 'Concept Surface Dekor', pdf: 'https://drive.google.com/file/d/1p4XUVmozZ9hG0xaJ78XAs-_l1qao2FZh/preview'},
+              { name: 'Digital Set New', pdf: 'https://drive.google.com/file/d/1zNgx0oBDjkjs-6ExxLmucSLr2CEn2hWI/preview'},
+              { name: 'Swiss Mica', pdf: 'https://drive.google.com/file/d/1Ma7GKmk1dwwpP5N9Er8payWzFtLIj3a_/preview'},
+              { name: 'ZT Series', pdf: 'https://drive.google.com/file/d/1xkzsb_KD43m_tq9Y-stTPawCsPn_Sq-4/preview'},
+              { name: 'Bravia Laminates', pdf: 'https://drive.google.com/file/d/1yxAOpet_YvOx6IlbvGwMByRobRzjKAvS/preview'},
+              { name: 'Bravia 1mm Normal', pdf: 'https://drive.google.com/file/d/1N01HR8F2UP40Hh6iMfgULRAEaclx0n6L/preview'},
+              { name: 'ERGO Monoso', pdf: 'https://drive.google.com/file/d/1kwTrv9w0r0D1vu_PlwdLSjwKb3fgY-Gh/preview'},
+              { name: 'MONOSO Original', pdf: 'https://drive.google.com/file/d/13rEKNe_x1tiNyDSlCRWNNx-0pXtEmyFM/preview'},
+              { name: 'Tapestry Laminates', pdf: 'https://drive.google.com/file/d/1JKnLQ4kgFc6YrZnG48l87E5Hy2ymltde/preview'},
+              { name: 'Gravito-VOL 02 Oaks', pdf: 'https://drive.google.com/file/d/1N1QdYSwqe8xVHGt-ZsdgY1Cjpm0FX2YY/preview'},
+              { name: 'Gravito-VOL 03 Dyed', pdf: 'https://drive.google.com/file/d/1qzwYUOC_EFkgA0H7nPXyupXIGIHMPZqJ/preview'},
+              { name: 'Gravito-VOL 04 DIFFS', pdf: 'https://drive.google.com/file/d/1WB0ejU4qbYYpd40LpS98elvbr8EAZfyk/preview'},
+              { name: 'Gravito-VOL 05 Stones', pdf: 'https://drive.google.com/file/d/1K1bd8X9DuOGZ214OmoIZ-pfpWJFMW1Fq/preview'},
+              { name: 'Gravito-VOL 06 Squaro', pdf: 'https://drive.google.com/file/d/10rPiq5XEsrWwT0Y5iki15g91kzsJnpJH/preview'},
+              { name: 'Gravito-VOL 07 Tall', pdf: 'https://drive.google.com/file/d/1cG4h91E0KO__mnSxr4GnKa_rhLOsrpTF/preview'},
+              { name: 'Gravito-VOL 08 Unicore', pdf: 'https://drive.google.com/file/d/1kBbU-J3hFbXJuqUtqvCQE_tsd58wQpWH/preview'},
+              { name: 'Gravito-VOL 12 NV', pdf: 'https://drive.google.com/file/d/10e1bjXA72_Q1J2t7XfviUzOr4EyFZob6/preview'},
+              { name: 'Gravito-VOL 13 Neon', pdf: 'https://drive.google.com/file/d/1YYkzqsGMlDpnwWUOlGOLZPtQpVrCf02q/preview'},
+              { name: 'Gravito Price List', pdf: 'https://drive.google.com/file/d/1JmT27HCMCJnbVo1P1fPnUzV_awtHUK0z/preview'},
+              { name: 'Salt Mica', pdf: 'https://drive.google.com/file/d/13C1cR9Nd_LWLHP_RdQ0AznMk4HdOO7KY/preview'},
+              { name: 'QR Code Full Sheet View', pdf: 'https://drive.google.com/file/d/1RQ8dTZa7dvtNs4P7FbuTq2PWp_NuDmTq/preview'},
+              { name: 'Orison By TreeLam', pdf: 'https://drive.google.com/file/d/1V-NJ0K30G7KkhdTiu48MfKrDlRwGYOVx/preview'},
+              { name: 'Terrazzo TreeLam', pdf: 'https://drive.google.com/file/d/1GGG7Ey2Y51BI-NeP-Kh5c1nDltxVyXbW/preview'},
+              { name: 'Bravia 1mm Layout', pdf: 'https://drive.google.com/file/d/1RdP77vdyeLt4rP28IJYi0gy5d0s5w7Nc/preview'},
+              { name: 'Crystal Laminates', pdf: 'https://drive.google.com/file/d/1aYJ7SsTXjHb1jEYs9vNL4obphSlhUNiF/preview'},
+              { name: 'Dazzle Berry', pdf: 'https://drive.google.com/file/d/1MJ5spvPKmmPnr15m7do5RqIq4hl_NyQe/preview'},
+              { name: 'Pentone Catalogue', pdf: 'https://drive.google.com/file/d/1OH6Wo3ylLMI0MWKm0gDDNryzW--c-119/preview'},
+              { name: 'IN-SENS Catalogue', pdf: 'https://drive.google.com/file/d/1Y0asoU5pG9rzl7bTgsZ-LJcStzrYzW5k/preview'},
+              { name: 'Ovel Laminates', pdf: 'https://drive.google.com/file/d/1r9lZ4jjKBf_ST0Ebtrf1nIpL0WypTSZI/preview'},
+              { name: 'Lamiteq Interactive Laminates', pdf: 'https://drive.google.com/file/d/1o0tRzN-WCk-7XO7QZVmP-lCXFvaBa8PG/preview'},
+              {name:  'TheroLuxe Laminates', pdf:'https://drive.google.com/file/d/13qWuGukfS2tabMs2M6ibuQ2puWWZeEd5/preview'}
           ],
           'fabric-sheets': [
               { name: 'Cotton Sheets', pdf: 'https://drive.google.com/file/d/FILE_ID_3/preview' },
