--- a/index.html
+++ b/index.html
@@ -675,8 +675,47 @@
               { name: 'Mouldings for Accent Walls', pdf: 'https://drive.google.com/file/d/19YZYmzGt9nZuhoPlqHmUe6hJ5yKqwVvh/preview' }
           ],
           'wallpapers': [
-              { name: 'Floral Wallpapers', pdf: 'https://drive.google.com/file/d/FILE_ID_7/preview' },
-              { name: 'Geometric Wallpapers', pdf: 'https://drive.google.com/file/d/FILE_ID_8/preview' }
+              { name: 'April 2021 Wallpaper Catalogue', pdf: 'https://drive.google.com/file/d/1Icf3cZ7J9oirELnu4ezTwJiz5ycshtHK/preview' },
+              { name: 'May A+ New wallpaper', pdf: 'https://drive.google.com/file/d/11iKQkKuuydY-cg58aix-ubWEXKUmD1_X/preview' },
+              {name:'EN-CORE Wallpapers', pdf:'https://drive.google.com/file/d/1ehkq4LJZdg0hGFxH1PfbkZvD8c-EUn_3/preview'},
+              {name:'Kohinoor Catalogue', pdf:'https://drive.google.com/file/d/1TQHSjW5sRonGqO3kIrpsNt7k2Ht-B94h/preview'},
+              {name:'Moments Catalogue', pdf:'https://drive.google.com/file/d/1F3yIYKXD9ZKwJ0jDbBf5I5Vp1g0O4hWx/preview'},
+              {name:'Regal e-Catalogue', pdf:'https://drive.google.com/file/d/1B96BFiGmj22cxzql38604b0hwCAMgJ_i/preview'},
+              {name:'Zion Green wallpapers', pdf:'https://drive.google.com/file/d/1NMyDal9QSaC6SOQ36fmRBu-QCcIhtPXJ/preview'},
+              {name:'ICONA Catalogue', pdf:'https://drive.google.com/file/d/1zDynmL36GEss3IygINmOU_16apYuLITr/preview'},
+              {name:'Nano Wallpaper', pdf:'https://drive.google.com/file/d/1JanN-Mxq49RRONHN5OZa7stSM7vaHFWq/preview'},
+              {name:'Wall Decor Vol-3', pdf:'https://drive.google.com/file/d/1CzUq-brR-JCRagY8sPtOpYzB9Ep4x1KI/preview'},
+              {name:'Art Work Abstract Wallpaper', pdf:'https://drive.google.com/file/d/1NIohD7TmmDxSCJQtxq9ia0P2e-U3A0ug/preview'},
+              {name:'Rafale wallpaper', pdf:'https://drive.google.com/file/d/1saSeWB_R1eB38qbHdU3UAWAicY7V1jN4/preview'},
+              {name:'Kraft Wallpaper', pdf:'https://drive.google.com/file/d/1XcUoYvSMv-BCVW9__vCeHQHPkJOxu6as/preview'},
+              {name:'Elite Effects Wallpaper', pdf:'https://drive.google.com/file/d/13oTuIKjZXksoBHgnJjl9Kqagv8FGydgm/preview'},
+              {name:'Gems-1 Wallpaper', pdf:'https://drive.google.com/file/d/1i9wo29Tg-eZGPYvT0jxN4uhgi5ugBk6n/preview'},
+              {name:'Rahira Catalogue', pdf:'https://drive.google.com/file/d/16aXhwWTCFf8FaMgxO8qciofHKGU2c3_e/preview'},
+              {name:'Trendy Walls', pdf:'https://drive.google.com/file/d/1pr4ob1uFCDjikaJsiGECSq9Q0bmHeeXl/preview'},
+              {name:'Remdesivir wallpaper', pdf:'https://drive.google.com/file/d/15ifPcW4XjACmX816os9UIigJyrfXKdQ1/preview'},
+              {name:'Flower Print Wallpaper', pdf:'https://drive.google.com/file/d/1_GyJWMzRtEppWFOwOTjYT7NwFVsbYt_A/preview'},
+              {name:'Milan Catalogue', pdf:'https://drive.google.com/file/d/16gdr_ubiQjHn9ls0gsv3qZAsfiQ6pfhR/preview'},
+              {name:'Metwall Wallpapers', pdf:'https://drive.google.com/file/d/12UIZflr1B3A1_NfCjkYZuxMjmRdK5GMh/preview'},
+              {name:'Wall Decore Bedroom', pdf:'https://drive.google.com/file/d/1bOsDuySzXbZRvNJyusm0jCvSqNnCTe6t/preview'},
+              {name:'Fresh Roll', pdf:'https://drive.google.com/file/d/1qwbiiG-yb-I90AfhZs5jUklRRpR9-ZP6/preview'},
+              {name:'Scotch OE Wallpaper', pdf:'https://drive.google.com/file/d/1DpfgfJQw3dQ6TNtF8HY2DYYcze58KRiX/preview'},
+              {name:'Kids Dreams Wallpaper', pdf:'https://drive.google.com/file/d/1FPGAoFzHs3rQXOH9sF44DLxxha0u85BV/preview'},
+              {name:'Berlin Catalogue', pdf:'https://drive.google.com/file/d/1UcDkl4g7-VVsmfnKazUiIDhWwS9yKNkV/preview'},
+              {name:'Tokyo Wallpapers', pdf:'https://drive.google.com/file/d/1XUAEK1BxcRVZI5o7DWJP4wMWtTFnuLGa/preview'},
+              {name:'Flower Whisper Wallpaper', pdf:'https://drive.google.com/file/d/1Ka3SX-7P5z7Pqk5wcufJ7rm4MYaFtkRY/preview'},
+              {name:'Floral Impression', pdf:'https://drive.google.com/file/d/1bim7zPqddMnVgTS9dyAu9GRCTRr53uQQ/preview'},
+              {name:'Fusion Art', pdf:'https://drive.google.com/file/d/156oQ1Rjq6xV6AGCSh38jmOND_e4at32p/preview'},
+              {name:'Velvet Wallpaper', pdf:'https://drive.google.com/file/d/1RbI_oeO-ydk3SV7m2Abnf5SASi-6aboF/preview'},
+              {name:'Darbar Majestic Walls', pdf:'https://drive.google.com/file/d/1wF-KsS5gQiqmXUStxFXH8zbaT253Sf5q/preview'},
+              {name:'Kalaa Wallcovering', pdf:'https://drive.google.com/file/d/1TfX5vGmHWr5MAj8vefDYwBN4Vw5WQ-TD/preview'},
+              {name:'Metallix Wallpapers', pdf:'https://drive.google.com/file/d/1q-JCFFbYtPPHd2sdoLf4X8pj-FXgeTt2/preview'},
+              {name:'Home Decore Luxury', pdf:'https://drive.google.com/file/d/1sxEze1kQZ3kSebrqqTMx-jSqyfPfuaZt/preview'},
+              {name:'Superb-1 Wallpaper', pdf:'https://drive.google.com/file/d/1DGPo1njLFILolhmCwX8DhUGPfcUM1YwF/preview'},
+              {name:'Mystic Wallpaper', pdf:'https://drive.google.com/file/d/1MkBbMDpp1ROO_pMu-jLwo5RN0XdAK1Hi/preview'},
+              {name:'Sketch Wallpaper', pdf:'https://drive.google.com/file/d/1_LNIcyeLrq0vigyihCci2qUUde-7rdhv/preview'},
+              {name:'Sequence by Wall Trendz', pdf:'https://drive.google.com/file/d/1Apw8F3hXhLTM6f6Pq1nrvOzdAjuOCOtM/preview'}
+
+
           ],
           'stone-veneers': [
             {name:'Leemo Stone Veneers',pdf:'https://drive.google.com/file/d/1I6oB22c5tSfcQhySGfVP0zJ9aTJG2gYm/preview'},
@@ -707,22 +746,51 @@
 
           ],
           'charcoal-highlighters':[
-            {name:'', pdf:''},
+            {name:'Styro-6 Catalogue', pdf:'https://drive.google.com/file/d/1b55A8cYhaqn1Wip2-K3qBpJ2Mc5sP6Et/preview'},
+            {name:'Styro Highlighters', pdf:'https://drive.google.com/file/d/1QxlJZ9a-LMtPJpbBPGlEkSHc5gyRubHP/preview'},
+            {name:'Styro Charcoal Highlights', pdf:'https://drive.google.com/file/d/16syLCCFbVZB-MOKlhk83PZD0W7uVmxbY/preview'},
+            {name:'Styro Catalogue-5', pdf:'https://drive.google.com/file/d/1L-BgCiiH7xmup6qQL9u2j6A1X9yxcwJF/preview'},
+            {name:'Sirocco Catalogue', pdf:'https://drive.google.com/file/d/1waLBmeMT_q8pMFDhS__QYTpUZRrVaXW1/preview'},
+            {name:'MD Catalogue', pdf:'https://drive.google.com/file/d/1qpmyvhNhbE1HDZrI8T3BgyrPW3eJcG-7/preview'},
+            {name:'Mann Charcoal and Carbon Series', pdf:'https://drive.google.com/file/d/12EORinr1i4Wr4U_fEx6X7jfYqzzVlRcg/preview'},
+            {name:'Luxouro Catalogue', pdf:'https://drive.google.com/file/d/1ikUra7pAdBGsu_Tfav_U_26tGP425ix-/preview'},
+            {name:'Gloirio Grace Interactive', pdf:'https://drive.google.com/file/d/1C04As-IFoSIKOfYSMQe5UEMxEjsEepvQ/preview'},
+            {name:'Charcopanel Catalogues', pdf:'https://drive.google.com/file/d/1u2IH1avFSdX4t9D8NRZFCOdflbTDOUh3/preview'},
+            {name:'Charcoal Gloirio', pdf:'https://drive.google.com/file/d/1Jg27WDY4xWGWWoguX9XPsTh3p3QVg0s3/preview'},
+            {name:'Carbon Charcoal', pdf:'https://drive.google.com/file/d/1GPkJsyplW6LLms0TggOkxBoh4VjcM5sv/preview'},
+            {name:'Carbon Catalogue Charcoal Panels', pdf:'https://drive.google.com/file/d/19KWw4xYwqDa7dpZfs9lWYqOyko_3rLIB/preview'},
+            {name:'Berlin Charcoal', pdf:'https://drive.google.com/file/d/19qJtXHuuafhGAPhgEUeCXSqbZ7YMKrS7/preview'},
+            {name:'Artique Panel Flap', pdf:'https://drive.google.com/file/d/1KYSaVWVLjtO62IRYchdn8qBfWl1XSHJx/preview'},
+            {name:'Anzio Charcoal by Treelam', pdf:'https://drive.google.com/file/d/1ihOFy9Yn9yf-XtOg0zYxHRyaFPSC1xDn/preview'},
+            {name:'Ext & Int 3D Charcopanel', pdf:'https://drive.google.com/file/d/101pQZ_gCe2qA2MRM1wz-ypevtbP7XnxD/preview'}
+            
           ],
           'acrylic-sheets':[
-            {name:'', pdf:''},
+            
           ],
           'asa-sheets':[
-            {name:'', pdf:''},
+            {name:'Venasa Deco Sheets', pdf:'https://drive.google.com/file/d/15O4s72sHEWdHqanCeHB9SA6gfRufXwwk/preview'},
+            {name:'Sk2 Bronito PETG', pdf:'https://drive.google.com/file/d/1ygdD10PUfJ7_CZSUThu4gw7eUsG3K9tY/preview'},
+            {name:'Axion Polymer Sheets', pdf:'https://drive.google.com/file/d/1p9_ycNchgmVw7dCpoV7fHvSNaDZ4GaNz/preview'},
+            {name:'Armasa by Treelam', pdf:'https://drive.google.com/file/d/1nD2Jh5JEwijvifENFZy70emxA-DX_h6Q/preview'}
           ],
           'backlit-alabasters':[
-            {name:'', pdf:''},
+            {name:'Textured Alabaster', pdf:'https://drive.google.com/file/d/1JZ1VGDEL_o-s_qkBJpkXGYYRGqOLbAEN/preview'},
+            {name:'Mystic Alabaster Acrylic resin panel', pdf:'https://drive.google.com/file/d/12v_2k52-wKLTtn1m8pRC2evbOxazSuZx/preview'},
+            {name:'Lyssa by Treelam', pdf:'https://drive.google.com/file/d/1bnLKdhyiTfPjynSVQ0Jx-w3gUOk82Vc4/preview'},
+            {name:'Backlight panel', pdf:'https://drive.google.com/file/d/126EtXzTGu-KOW4HcveIkgMe082XF_ZlD/preview'},
+            {name:'Alabaster Acrylic Resin Panels', pdf:'https://drive.google.com/file/d/1gYKD6j32DKVXmHkTXQRaSP8W9vg3qU-u/preview'},
+            {name:'Interior Backlite Panels', pdf:'https://drive.google.com/file/d/1q-SbhsiRed_-yH6K4QJZBvJGRTWLUhsp/preview'},
+            {name:'Alabster Client Facing', pdf:'https://drive.google.com/file/d/12WoyKQ2ibV9s4KHIQP6zRX6v2ZOwEDKv/preview'}
           ],
           'blinds':[
             {name:'', pdf:''},
           ],
           'cane-webbings':[
-            {name:'', pdf:''},
+            {name:'Rattan Cane Client Facing Catalogue', pdf:'https://drive.google.com/file/d/1J3ZkfNY2XESQEMxYvMDMNQk3tpbltvFb/preview'},
+            {name:'Mystic Rattanex Cane Webbing', pdf:'https://drive.google.com/file/d/1jACgoQyiwtyW6_SjfloF8yMZ3PoCIueK/preview'},
+            {name:'Canex Mobile', pdf:'https://drive.google.com/file/d/1mVvqBFraUMLJ5GMlbQ5zYdrpulNQjAWf/preview'},
+            {name:'Interior Cane Webbing Rolls', pdf:'https://drive.google.com/file/d/1Z1aPEybKDJKZdeCTnptyxolJeXkLea-E/preview'}
           ],
           'ceiling':[
             {name:'', pdf:''},
@@ -796,7 +864,7 @@ function openModal(category) {
   const title = document.getElementById('modal-title');
   const list = document.getElementById('type-list');
 
-  title.textContent = `Product Types - ${category.replace('-', ' ').toUpperCase()}`;
+  title.textContent = `${category.replace('-', ' ').toUpperCase()}`;
   list.innerHTML = ''; // Clear previous items
 
   products[category].forEach(type => {
