--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('laminates')">
-                      <img class="product__image" src="images/product-01-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-01-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -249,7 +249,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('acoustic-panels')">
-                      <img class="product__image" src="images/product-04-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-01-210x200.jpg" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -318,7 +318,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('mosaics')">
-                      <img class="product__image" src="images/product-09-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-09-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -352,7 +352,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('evergreen-panels')">
-                      <img class="product__image" src="images/product-11-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-11-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -369,7 +369,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('charcoal-highlighters')">
-                      <img class="product__image" src="images/product-12-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-12-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -386,7 +386,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('acrylic-sheets')">
-                      <img class="product__image" src="images/product-13-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-13-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -454,7 +454,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('cane-webbings')">
-                      <img class="product__image" src="images/product-17-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-17-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -539,7 +539,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('hpl')">
-                      <img class="product__image" src="images/product-22-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-22-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -624,7 +624,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('door-skins')">
-                      <img class="product__image" src="images/product-27-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-27-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
