--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('laminated-particleboards')">
-                      <img class="product__image" src="images/product-21-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-21-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
