--- a/index.html
+++ b/index.html
@@ -1272,6 +1272,31 @@
           ],
           'wall-highlighters':[
             {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
+            {name:'', pdf:''},
           ],
           'door-skins':[
             {name:'Door Skin E-Catalogue', pdf:'https://drive.google.com/file/d/1F728mLKPn2IQB9ziaHiN-IlBp_s9MgI4/preview'},
