--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </section>
       <!-- Production-->
-      <section class="section section-md bg-default text-center">
+    <!--  <section class="section section-md bg-default text-center">
         <div class="container" id="home">
           <h2>Our Collections</h2>
           <div class="row row-70 row-lg-110 row-offset-1">
@@ -142,7 +142,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- Experience since 1999-->
      
         <div class="about-us-section" id="about-us">
@@ -154,7 +154,9 @@
           <div class="about-us-text">
               <h2>About Us</h2>
               <p>
-                  Welcome to our company! We are dedicated to providing exceptional services and innovative solutions tailored to your needs. Our team is passionate about creating value and making a difference in the lives of our customers and the community.
+                Welcome to World of Wood, your trusted partner for high-quality building materials and decorative solutions. For over 50 years, we have proudly served homeowners, contractors, and 350+ retailers across Madhya Pradesh. Our extensive range includes plywood, sunmica, louvers, highlighters, fabric sheets, charcoal panels, evergreen panels, and more, catering to construction, interior design, and furniture-making needs.
+</p>
+<p>At World of Wood, we prioritize quality, innovation, and customer satisfaction. Whether you're renovating your home, managing a commercial project, or sourcing materials for your retail business, we’ve got you covered. With reliable materials from trusted suppliers and exceptional service at competitive prices, we aim to build lasting relationships with every client. Thank you for choosing World of Wood!
               </p>
           </div>
           <div class="about-us-video">
@@ -249,7 +251,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('acoustic-panels')">
-                      <img class="product__image" src="images/product-01-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-05-210x200.jpg" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -556,7 +558,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('metal-sheets')">
-                      <img class="product__image" src="images/product-23-210x200.jpeg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-22-210x200.png" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -641,7 +643,7 @@
                   <!--product-->
                   <article class="product">
                     <div class="product__image-container" onclick="openModal('others')">
-                      <img class="product__image" src="images/product-01-210x200.jpg" alt="" width="210" height="200"/>
+                      <img class="product__image" src="images/product-28-210x200.jpg" alt="" width="210" height="200"/>
                       <div class="product__overlay">
                         <div class="view-button">
                           <span class="view-text">View</span>
@@ -1271,31 +1273,6 @@
     
           ],
           'wall-highlighters':[
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
-            {name:'', pdf:''},
             {name:'', pdf:''},
           ],
           'door-skins':[
