--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
             <div class="founders">
               <div class="founder">
                 <img src="images/founder1.png" alt="Founder 1">
-                <p>Narendra Singhal</p>
+                <p>Mr. Narendra Singhal</p>
               </div>
               <div class="founder">
                 <img src="images/founder2.jpeg" alt="Founder 2">
-                <p>Girraj Singhal</p>
+                <p>Mr. Girraj Singhal</p>
               </div>
             </div>
           </div>
